update stats and clean code